feat: add git repo
